--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "wavesurfer-js-react",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.9.9",
+  "homepage": "https://nonstickcode.github.io/wavesurfer-js/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "prettier --write ."
@@ -27,6 +29,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.2.4",
     "vite": "^5.0.8"
   }
